--- a/plutus-book/doc/non-fungible/nonfungible4.adoc
+++ b/plutus-book/doc/non-fungible/nonfungible4.adoc
@@ -109,7 +109,12 @@ forge n = do
 
     outs <- outputsAt $ nonFungibleAddress nf
     case Map.keys outs of
-        (ref : _) -> do
+        -- TODO: This makes the prank work, but in the wrong way. It now causes
+        -- a failure due to there simply being multiple outputs, not due to the
+        -- data script having the wrong type. However, the old version matched on
+        -- (ref : _), but that doesn't work since we can't assume the prank transaction
+        -- will be first in the list (they're ordered by hash, effectively).
+        [ref] -> do
             let v = nonFungibleValue nf n
             signTxAndSubmit_ Tx
                 { txInputs     = Set.singleton $ scriptTxIn
