--- a/plutus-book/doc/10-PlutusTx.adoc
+++ b/plutus-book/doc/10-PlutusTx.adoc
@@ -15,7 +15,7 @@ These special Plutus Tx sections in a Haskell program are themselves just Haskel
 Strictly speaking, only a subset of Haskell is
 supported, but the majority of simple Haskell should work, and the compiler will tell you if
 you use something that is unsupported.
-This chapter is an explanation of the the Plutus Tx language. For an in-depth
+This chapter is an explanation of the Plutus Tx language. For an in-depth
 discussion of the nature of Plutus Core, which Plutus Tx compiles to, see <<endmatter#plutuscore>>.
 
 The key technique that the Plutus Platform uses is called staged metaprogramming.
