--- a/plutus-book/doc/multi/multi.adoc
+++ b/plutus-book/doc/multi/multi.adoc
@@ -1,7 +1,7 @@
 [#multi]
 = Multi-Stage Contracts
 
-The example scripts we have seen so far had one thing in common: All locked funds
+The example scripts we have seen so far had one thing in common: all locked funds
 were collected from them in one step. In this chapter, we want to look at an
 example where this is not the case and where the funds can be collected in
 potentially many steps.
